Fix Input bug
Labels were too big

--- a/assets/styles/_ourvariables.scss
+++ b/assets/styles/_ourvariables.scss
@@ -66,7 +66,7 @@ $input-border-color: color("grey", "base") !default;
 $input-error-color: $error-color !default;
 $input-success-color: $success-color !default;
 $input-focus-color: $secondary-color !default;
-$label-font-size: 1.8rem;
+$label-font-size: 0.8rem;
 $input-disabled-color: rgba(0,0,0, .26) !default;
 
 
